Cherry-pick 3f019cf4b5d2. rdar://problem/97921749

REGRESSION(250037@main): wpt /service-workers/service-worker/registration-updateviacache.https.html has become flaky
    https://bugs.webkit.org/show_bug.cgi?id=243410
    <rdar://97921749>

    Reviewed by Darin Adler.

    This patch is a partial revert of 250037@main to address the flakiness while keeping the intended Web-facing
    behavior change. In particular, I am reverting the logic to refresh the scripts imported by a service worker
    from the client process that requested the update. We now refresh those scripts from the NetworkProcess
    unconditionally, like we did before 250037@main.

    As explained by Youenn when he landed his workaround in 251742@main, the issue is that after 250037@main, we
    sometimes fetch those scripts from the network process, or service worker process or a regular WebProcess.
    Depending on which client made the fetch, we could get different results because of memory caching.

    You could end up with the following scenario for example:
    1. First fetch of script A is made from WebProcess 1, which caches the script in its memory cache
    2. Second fetch of script A occurs directly from the NetworkProcess, which would update the HTTP network
       cache only.
    3. Third fetch of script A is made from WebProcess 1 which uses the version it has in its memory cache,
       even though it is not the latest one (WP1 is not aware of the update that occurred at step 2.)

    For now, let's fetch everything from the network process again to avoid such caching issues and truly
    address flakiness.

    * LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/resources/update-max-aged-worker.py:
    (main):
    Revert workaround that Youenn added in 251742@main to try and address the flakiness, given that it doesn't
    completely fix it and other browsers don't need it.

    * LayoutTests/platform/ios/TestExpectations:
    Unskip test now that it should no longer be flaky.

    * Source/WebCore/workers/WorkerScriptLoader.cpp:
    (WebCore::WorkerScriptLoader::loadAsynchronously):
    * Source/WebCore/workers/service/SWClientConnection.cpp:
    (WebCore::RefreshImportedScriptsCallbackHandler::RefreshImportedScriptsCallbackHandler): Deleted.
    (WebCore::RefreshImportedScriptsCallbackHandler::~RefreshImportedScriptsCallbackHandler): Deleted.
    (WebCore::RefreshImportedScriptsCallbackHandler::call): Deleted.
    (WebCore::SWClientConnection::refreshImportedScripts): Deleted.
    * Source/WebCore/workers/service/SWClientConnection.h:
    * Source/WebCore/workers/service/ServiceWorkerJob.cpp:
    (WebCore::ServiceWorkerJob::cancelPendingLoad):
    (WebCore::ServiceWorkerJob::ImportedScriptsLoader::ImportedScriptsLoader): Deleted.
    (WebCore::ServiceWorkerJob::ImportedScriptsLoader::~ImportedScriptsLoader): Deleted.
    (WebCore::ServiceWorkerJob::ImportedScriptsLoader::load): Deleted.
    (WebCore::ServiceWorkerJob::ImportedScriptsLoader::cancel): Deleted.
    (WebCore::ServiceWorkerJob::ImportedScriptsLoader::notifyFinished): Deleted.
    (WebCore::ServiceWorkerJob::refreshImportedScripts): Deleted.
    * Source/WebCore/workers/service/ServiceWorkerJob.h:
    * Source/WebCore/workers/service/server/SWServer.cpp:
    (WebCore::SWServer::refreshImportedScripts):
    * Source/WebCore/workers/service/server/SWServer.h:
    * Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.cpp:
    (WebKit::WebSWServerConnection::refreshImportedScripts): Deleted.
    * Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.h:
    * Source/WebKit/WebProcess/Storage/WebSWClientConnection.messages.in:
    Partial revert of 250037@main.

    Canonical link: https://commits.webkit.org/253140@main

Canonical link: https://commits.webkit.org/252432.231@safari-7614-branch